--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "psr/log": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*"
