--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Alex Kalicki",
-            "email": "alexk@vimeo.com"
+            "email": "alexander.kalicki@gmail.com"
         },
         {
             "name": "Jacob Oliver",
