--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "psr/log": "~1.0"
+        "psr/log": "~1.0",
+        "monolog/monolog": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*"
